--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="http://172.233.98.24/main.css">
+        <link rel="stylesheet" href="https://github.com/fearmee/startpage/blob/main/main.css">
     </head>
     <body>
         <ul>
