--- a/index.html
+++ b/index.html
@@ -10,15 +10,6 @@
         <ul>
             <li>home</li>
             <li><a href="http://127.0.0.1:1101" target="_top">docs</a></li>
-            <li><a href="http://o2.home:8123/" target="_top">home assistant</a></li>
-            <li><a href="http://nextcloud.home/" target="_top">nextcloud</a></li>
-            <li><a href="http://osmc.home/" target="_top">osmc</a></li>
-            <li><a href="http://o1.home:8080/" target="_top">qbittorrent</a></li>
-            <li><a href="http://o1.home:8060/" target="_top">miniserve o1</a></li>
-            <li><a href="http://syncthing.home:8384/" target="_top">syncthing</a></li>
-            <li><a href="http://linkding.home:9090/bookmarks" target="_top">linkding</a></li>
-            <li><a href="http://n8n.home:5678" target="_top">n8n</a></li>
-            <li><a href="http://o3.home:5000/" target="_top">kavita</a></li>
         </ul>
 
         <ul>
@@ -27,8 +18,8 @@
         </ul>
 
         <ul>
-            <li>my apps</li>
-            <li><a href="https://r.imn1.xyz" target="_top">richy</a></li>
+            <li>bagulhos</li>
+            <li><a href="https://web.whatsapp.com/" target="_top">whatsapp</a></li>
             <li><a href="https://git.imn1.xyz/" target="_top">cgit</a></li>
             <li><a href="https://hs.notdevs.cz/" target="_top">hoppscotch</a></li>
         </ul>
@@ -49,13 +40,8 @@
         <ul>
             <li>media</li>
             <li><a href="https://www.youtube.com/" target="_top">youtube</a></li>
-            <li><a href="https://ytch.xyz/" target="_top">ytch</a></li>
-            <li><a href="https://www.di.fm/" target="_top">di.fm</a></li>
-            <li><a href="https://nhl66.ir/" target="_top">nhl 66</a></li>
-            <li><a href="https://sportsurge.net/#/groups/45" target="_top">sportsurge</a></li>
-            <li><a href="https://www.esportsguide.com/" target="_top">esports guide</a></li>
-            <li><a href="https://asoftmurmur.com/" target="_top">a sort mur mur</a></li>
-            <li><a href="https://www.rainymood.com/" target="_top">rainy mood</a></li>
+            <li><a href="https://www.patreon.com/" target="_top">patreon</a></li>
+            <li><a href="https://www.twitch.tv/" target="_top">twitch</a></li>
             <li><a href="https://moodist.app/" target="_top">moodist</a></li>
         </ul>
 
@@ -84,14 +70,9 @@
 
         <ul>
             <li>projects</li>
-            <li><a href="https://gitlab.com/documents5" target="_top">documents</a></li>
-            <li><a href="https://gitlab.com/imn1/richy" target="_top">richy</a></li>
-            <li><a href="https://gitlab.com/imn1/rug" target="_top">rug</a></li>
-            <li><a href="https://gitlab.com/imn1/karpet" target="_top">karpet</a></li>
-            <li><a href="https://gitlab.com/imn1/trs" target="_top">trs</a></li>
-            <li><a href="https://gitlab.com/imn1/glp" target="_top">glp</a></li>
-            <li><a href="https://gitlab.com/imn1/tex" target="_top">tex</a></li>
-            <li><a href="https://gitlab.com/imn1/emby" target="_top">emby</a></li>
+            <li><a href="https://github.com/fearmee/" target="_top">github</a></li>
+            <li><a href="https://docs.google.com/document/u/0/" target="_top">google docs</a></li>
+            <li><a href="https://docs.google.com/spreadsheets/u/0/" target="_top">google sheets</a></li>
         </ul>
     </body>
 </html>
