--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul>
             <li>lan</li>
             <li><a href="http://router/" target="_top">router</a></li>
+            <li><a href="http://192.168.1.10/" target="_top">web</a></li>
         </ul>
 
         <ul>
