--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     </head>
     <body>
         <ul>
-            <li>home</li>
-            <li><a href="http://127.0.0.1:1101" target="_top">docs</a></li>
+            <li>search</li>
+            <li><a href="https://duckduckgo.com/" target="_top">duckduckgo</a></li>
+            <li><a href="https://yandex.com//" target="_top">yandex</a></li>
         </ul>
 
         <ul>
