--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             <li>bagulhos</li>
             <li><a href="https://web.whatsapp.com/" target="_top">whatsapp</a></li>
             <li><a href="https://git.imn1.xyz/" target="_top">cgit</a></li>
-            <li><a href="https://hs.notdevs.cz/" target="_top">hoppscotch</a></li>
         </ul>
 
         <ul>
@@ -49,18 +48,11 @@
 
         <ul>
             <li>search</li>
-            <li><a href="https://libgen.lc/" target="_top">library genesis</a></li>
-            <li><a href="https://annas-archive.org/" target="_top">anna's archive</a></li>
-            <li><a href="https://anarchistickaknihovna.org" target="_top">anarchisticka knihovna</a></li>
             <li><a href="https://gutenberg.org/" target="_top">guttenberg</a></li>
             <li><a href="https://librivox.org/" target="_top">librivox</a></li>
             <li><a href="https://the-eye.eu/public/" target="_top">the eye</a></li>
-            <li><a href="http://azair.cz/" target="_top">az air</a></li>
-            <li><a href="https://cs.github.com/" target="_top">code</a></li>
             <li><a href="https://grep.app/" target="_top">grep app</a></li>
             <li><a href="https://www.thingiverse.com/" target="_top">thingiverse</a></li>
-            <li><a href="https://www.mankier.com/" target="_top">mankier</a></li>
-            <li><a href="https://www.civitai.com/" target="_top">civit ai</a></li>
         </ul>
 
         <ul>
@@ -72,7 +64,7 @@
 
         <ul>
             <li>projects</li>
-            <li><a href="https://github.com/fearmee/" target="_top">github</a></li>
+            <li><a href="https://github.com/" target="_top">github</a></li>
             <li><a href="https://docs.google.com/document/u/0/" target="_top">google docs</a></li>
             <li><a href="https://docs.google.com/spreadsheets/u/0/" target="_top">google sheets</a></li>
         </ul>
