--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
         <ul>
             <li>lan</li>
             <li><a href="http://router/" target="_top">router</a></li>
-            <li><a href="http://192.168.1.10/" target="_top">web</a></li>
+            <li><a href="http://192.168.1.10/" target="_top">repo</a></li>
         </ul>
 
         <ul>
-            <li>bagulhos</li>
+            <li>social</li>
             <li><a href="https://web.whatsapp.com/" target="_top">whatsapp</a></li>
-            <li><a href="https://git.imn1.xyz/" target="_top">cgit</a></li>
+            <li><a href="https://www.reddit.com" target="_top">reddit</a></li>
+            <li><a href="https://www.linkedin.com/" target="_top">reddit</a></li>
         </ul>
 
         <ul>
@@ -67,6 +68,7 @@
             <li><a href="https://github.com/" target="_top">github</a></li>
             <li><a href="https://docs.google.com/document/u/0/" target="_top">google docs</a></li>
             <li><a href="https://docs.google.com/spreadsheets/u/0/" target="_top">google sheets</a></li>
+            <li><a href="https://git.imn1.xyz/" target="_top">cgit</a></li>
         </ul>
     </body>
 </html>
